--- a/PhotoNg/frontend/css/MyStyle.css
+++ b/PhotoNg/frontend/css/MyStyle.css
@@ -3,8 +3,8 @@
 .focus{
 
     font-size: 15px;
-    border: 2px solid red;
-    background-color: red;
+    border: 2px solid #0636ff;
+    background-color: #ffe400;
     color:red;
 
 }
