--- a/PhotoNg/frontend/css/MyStyle.css
+++ b/PhotoNg/frontend/css/MyStyle.css
@@ -14,3 +14,14 @@
     color: yellow;
 
 }
+
+.myAppH {
+    visibility: hidden;
+    opacity:0;
+    transition:visibility 0.3s linear,opacity 0.3s linear;
+}
+.myAppV {
+    visibility: visible;
+    opacity:1;
+    transition:all 0.5s linear;
+ }
